--- a/组件事件交互.html
+++ b/组件事件交互.html
@@ -15,6 +15,7 @@
 		华山剑法
 		东方不败--吸星大法
 		{{msg}}
+		辟邪剑谱 果然厉害
         <h2 @click="clickCallback">{{msg}}</h2>
 	</div>
 	<script src="https://unpkg.com/vue@3.2.28/dist/vue.global.js"></script>
